// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render a block list 1`] = `
<section
  class="blockCollection"
>
  <div
    class="sortableBlockList"
  >
    <section
      class="block"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="sortableHandle su-more"
        />
      </div>
      <div
        class="content"
      >
        <article />
      </div>
    </section>
    <section
      class="block"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="sortableHandle su-more"
        />
      </div>
      <div
        class="content"
      >
        <article />
      </div>
    </section>
  </div>
  <button
    class="button secondary"
    type="button"
  >
    <span
      aria-label="su-plus"
      class="buttonIcon su-plus"
    />
    <span
      class="text"
    >
      Add block
    </span>
  </button>
</section>
`;

exports[`Should render a fully filled block list without add button if maxOccurs is reached 1`] = `
<section
  class="blockCollection"
>
  <div
    class="sortableBlockList"
  >
    <section
      class="block"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="sortableHandle su-more"
        />
      </div>
      <div
        class="content"
      >
        <article />
      </div>
    </section>
    <section
      class="block"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="sortableHandle su-more"
        />
      </div>
      <div
        class="content"
      >
        <article />
      </div>
    </section>
  </div>
  <button
    class="button secondary"
    disabled=""
    type="button"
  >
    <span
      aria-label="su-plus"
      class="buttonIcon su-plus"
    />
    <span
      class="text"
    >
      Add block
    </span>
  </button>
</section>
`;

exports[`Should render an empty block list 1`] = `
<section
  class="blockCollection"
>
  <div
    class="sortableBlockList"
  />
  <button
    class="button secondary"
    type="button"
  >
    <span
      aria-label="su-plus"
      class="buttonIcon su-plus"
    />
    <span
      class="text"
    >
      Add block
    </span>
  </button>
</section>
`;
